fix #32810 logo is too big, use file size instead

--- a/root/static/final.css
+++ b/root/static/final.css
@@ -717,15 +717,8 @@ td.x-btn-bl, td.x-btn-bc, td.x-btn-br {
 
 .img-main-logo-file{
     border:0px;
-    width:220px;
-    height:40px;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-=======
->>>>>>> Remove a wrong character in .img-main-logo-powered attrs
 .img-main-logo-powered {
     position:absolute;
     border:0px;
